--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -1,5 +1,6 @@
 [supervisord]
 nodaemon=true
+loglevel=debug
 
 [program:xvfb]
 command=/usr/bin/Xvfb :1 -screen 0 1920x1080x24
@@ -15,7 +16,7 @@ priority=200
 
 [program:slstudio]
 environment=HOME="/home/symmetry",DISPLAY=":1",USER="symmetry"
-command=/opt/SymmetryLabs/SLStudio/bin/SLStudio
+command=/home/symmetry/SLStudio/bin/SLStudio
 user=symmetry
-autorestart=true
+autorestart=false
 priority=300
