--- a/docker/Dockerfile-alpine
+++ b/docker/Dockerfile-alpine
@@ -1,4 +1,5 @@
-FROM openjdk:8-jre-alpine
+#FROM openjdk:8-jre-alpine
+FROM alpine:edge
 
 RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/main" > /etc/apk/repositories
 RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories
@@ -15,6 +16,11 @@ RUN rm -rf /tmp/* /var/cache/apk/*
 
 #RUN rm $JAVA_HOME/lib/accessibility.properties
 
+ARG java_pkg=server-jre-8u162-linux-x64.tar.gz
+ARG java_name=jdk1.8.0_162
+ADD $java_pkg /opt
+ENV JAVA_HOME=/opt/$java_name
+
 RUN addgroup symmetry
 RUN adduser -G symmetry -s /bin/sh -D symmetry
 RUN echo "symmetry:sugarcubes" | /usr/sbin/chpasswd
@@ -29,7 +35,7 @@ ADD projects /home/symmetry/SLStudio/projects
 RUN echo "projects/default.lxp" > /home/symmetry/SLStudio/.lxproject
 RUN chown -R symmetry:symmetry /home/symmetry/SLStudio
 
-#USER symmetry
+USER symmetry
 WORKDIR /home/symmetry/SLStudio
 EXPOSE 5900
 ENV DISPLAY :1
