--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ mainClassName = 'com.symmetrylabs.slstudio.SLStudio'
 
 run {
 	jvmArgs '-Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=12345 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Djava.awt.headless=true'
+
+	// To select a layout from the command line, "gradlew run -Playout=cubes"
+	systemProperty 'com.symmetrylabs.layout', findProperty('layout')
 }
 
 docker {
