Adds the keyboard command "L" to switch layouts (restarts SLStudio).

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,14 @@ run {
 
 	// To select a layout from the command line, "gradlew run -Playout=cubes"
 	systemProperty 'com.symmetrylabs.layout', findProperty('layout')
+
+	doLast {
+		while (file(".restart").exists()) {
+			file(".restart").delete()
+			println 'Restarting...'
+			run.exec()
+		}
+	}
 }
 
 docker {
