--- a/build.gradle
+++ b/build.gradle
@@ -119,6 +119,13 @@ dependencies {
 	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
 }
 
+compileKotlin {
+	kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+	kotlinOptions.jvmTarget = "1.8"
+}
+
 jar {
 	exclude('**/*.swp')
 	exclude('**/*.swo')
