--- a/AI_VJ/setup_scripts/env_slim.yml
+++ b/AI_VJ/setup_scripts/env_slim.yml
@@ -4,31 +4,95 @@ channels:
 - anaconda-fusion
 - defaults
 dependencies:
+- audioread=2.1.4=py36_2
+- ffmpeg=2.8.6=5
+- joblib=0.11=py36_0
 - librosa=0.6.0=py36_0
+- resampy=0.2.0=py36_1
+- x264=20131217=3
+- alabaster=0.7.10=py36h174008c_0
 - anaconda-client=1.6.9=py36_0
 - anaconda=custom=py36ha4fed55_0
 - anaconda-project=0.8.2=py36h9ee5d53_0
 - appnope=0.1.0=py36hf537a9a_0
 - appscript=1.0.1=py36h9e71e49_1
+- asn1crypto=0.24.0=py36_0
 - astroid=1.6.1=py36_0
 - astropy=2.0.3=py36h1de35cc_0
 - attrs=17.4.0=py36_0
+- babel=2.5.3=py36_0
+- backports=1.0=py36ha3c1827_1
+- backports.shutil_get_terminal_size=1.0.0=py36hd7a2ee4_2
+- beautifulsoup4=4.6.0=py36h72d3c9f_1
+- bitarray=0.8.1=py36h1de35cc_1
+- bkcharts=0.2=py36h073222e_0
+- blaze=0.11.3=py36h02e7a37_0
+- bleach=2.1.2=py36_0
+- bokeh=0.12.13=py36h2f9c1c0_0
+- boto=2.48.0=py36hdbc59ac_1
+- bottleneck=1.2.1=py36hbd380ad_0
+- bzip2=1.0.6=hd86a083_4
+- ca-certificates=2017.08.26=ha1e5d58_0
+- cctools=895=h7512d6f_0
+- certifi=2018.1.18=py36_0
+- cffi=1.11.4=py36h342bebf_0
+- chardet=3.0.4=py36h96c241c_1
+- clang=4.0.1=h662ec87_0
+- clang_osx-64=4.0.1=h1ce6c1d_10
+- clangxx=4.0.1=hc9b4283_0
+- clangxx_osx-64=4.0.1=h22b1bf0_10
+- click=6.7=py36hec950be_0
+- cloudpickle=0.5.2=py36_1
+- clyent=1.2.2=py36hae3ad88_0
+- colorama=0.3.9=py36hd29a30c_0
+- compiler-rt=4.0.1=h5487866_0
+- contextlib2=0.5.5=py36hd66e5e7_0
+- cryptography=2.1.4=py36h842514c_0
 - curl=7.58.0=ha441bb4_0
+- cycler=0.10.0=py36hfc81398_0
+- cython=0.27.3=py36h6ecb376_0
+- cytoolz=0.9.0=py36h1de35cc_0
+- dask=0.16.1=py36_0
+- dask-core=0.16.1=py36_0
+- datashape=0.5.4=py36hfb22df8_0
+- dbus=1.12.2=h5243cc1_1
+- decorator=4.2.1=py36_0
+- distributed=1.20.2=py36_0
 - docutils=0.14=py36hbfde631_0
 - entrypoints=0.2.3=py36hd81d71f_2
 - et_xmlfile=1.0.1=py36h1315bdc_0
+- expat=2.2.5=hb8e80ba_0
+- fastcache=1.0.2=py36h1de35cc_2
+- filelock=2.0.13=py36hf9de95b_0
 - flask=0.12.2=py36h5658096_0
 - flask-cors=3.0.3=py36h7387b97_0
+- freetype=2.8=h12048fb_1
+- get_terminal_size=1.0.0=h7520d66_0
 - gettext=0.19.8.1=h15daf44_3
 - gevent=1.2.2=py36ha70b9d6_0
 - glib=2.53.6=h33f6a65_2
 - glob2=0.6=py36h94c9186_0
+- gmp=6.1.2=hb37e062_1
+- gmpy2=2.0.8=py36hf9c35bd_2
+- greenlet=0.4.12=py36hf09ba7b_0
 - h5py=2.7.1=py36h39cdac5_0
 - hdf5=1.10.1=ha036c08_1
+- heapdict=1.0.0=py36_2
+- html5lib=1.0.1=py36h2f9c1c0_0
+- icu=58.2=h4b95b61_1
+- idna=2.6=py36h8628d0a_1
+- imageio=2.2.0=py36h5e01289_0
+- imagesize=0.7.1=py36h3495948_0
+- intel-openmp=2018.0.0=h8158457_8
 - ipykernel=4.8.0=py36_0
 - ipython=6.2.1=py36h3dda519_1
 - ipython_genutils=0.2.0=py36h241746c_0
 - ipywidgets=7.1.1=py36_0
+- isort=4.2.15=py36hceb2a01_0
+- itsdangerous=0.24=py36h49fbb8d_1
+- jbig=2.1=h4d881f8_0
+- jdcal=1.3=py36h1986823_0
+- jedi=0.11.1=py36_0
 - jinja2=2.10=py36hd36f9c5_0
 - jpeg=9b=he5867d9_2
 - jsonschema=2.6.0=py36hb385e00_0
