--- a/palette_mapping.json
+++ b/palette_mapping.json
@@ -14,16 +14,16 @@
 			"right": "Hnb"
 		},
 		"preset-scroll": {
-			"left": "TODO",
-			"right": "TODO"
+			"left": "H&M",
+			"right": "Hlf"
 		},
 		"preset-save": {
-			"left": "TODO",
-			"right": "TODO"
+			"left": "H&M",
+			"right": "Hlf"
 		},
 		"preset-fire": {
-			"left": "TODO",
-			"right": "TODO"
+			"left": "G8|",
+			"right": "GR%"
 		},
 		"blendmode-scroll": {
 			"left": "Gyu",
