--- a/build.gradle
+++ b/build.gradle
@@ -97,6 +97,11 @@ dependencies {
 	// https://github.com/SymmetryLabs/aparapi
 	implementation 'com.github.SymmetryLabs:aparapi:b6fffad'
 
+	// http://jcodec.org
+	implementation 'org.jcodec:jcodec:0.2.2'
+
+	implementation group: 'uk.co.caprica', name: 'vlcj', version: '3.10.1'
+
 	implementation project(':p3lx')
 
 	implementation files('libs/minim.jar')
