--- a/build.gradle
+++ b/build.gradle
@@ -69,54 +69,54 @@ repositories {
 
 dependencies {
 	// https://mvnrepository.com/artifact/org.processing/core
-	compile(group: 'org.processing', name: 'core', version: '3.3.6') {
+	implementation(group: 'org.processing', name: 'core', version: '3.3.6') {
 		exclude group: 'org.jogamp.gluegen'
 		exclude group: 'org.jogamp.jogl'
 	}
 
 	// https://mvnrepository.com/artifact/com.harium/kdtree
-	compile group: 'com.harium', name: 'kdtree', version: '1.0.0'
+	implementation group: 'com.harium', name: 'kdtree', version: '1.0.0'
 
 	// https://mvnrepository.com/artifact/org.javassist/javassist
-	compile group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
+	implementation group: 'org.javassist', name: 'javassist', version: '3.22.0-GA'
 
 	// https://mvnrepository.com/artifact/com.google.guava/guava
-	compile group: 'com.google.guava', name: 'guava', version: '23.5-jre'
+	implementation group: 'com.google.guava', name: 'guava', version: '23.5-jre'
 
 	// https://mvnrepository.com/artifact/org.apache.commons/commons-math3
-	compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+	implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
 	// https://mvnrepository.com/artifact/uk.co.xfactory-librarians/coremidi4j
-	compile group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
+	implementation group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
 
 	// https://mvnrepository.com/artifact/com.google.code.gson/gson
-	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 
 	// https://mvnrepository.com/artifact/uk.co.xfactory-librarians/coremidi4j
-	compile group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
+	implementation group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
 
 	// https://mvnrepository.com/artifact/org.jetbrains.kotlin/kotlin-stdlib
-	compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.2.60'
+	implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.2.60'
 
 	// https://mvnrepository.com/artifact/io.github.lukehutch/fast-classpath-scanner
-	compile group: 'io.github.lukehutch', name: 'fast-classpath-scanner', version: '2.9.3'
+	implementation group: 'io.github.lukehutch', name: 'fast-classpath-scanner', version: '2.9.3'
 
 	// lock aparapi-jni snapshot version
 	// https://oss.sonatype.org/content/repositories/snapshots/com/aparapi/aparapi-jni/
-	compile "com.aparapi:aparapi-jni:1.1.3-20180211.063116-7"
+	implementation "com.aparapi:aparapi-jni:1.1.3-20180211.063116-7"
 
 	// https://github.com/SymmetryLabs/aparapi
-	compile 'com.github.SymmetryLabs:aparapi:b6fffad'
+	implementation 'com.github.SymmetryLabs:aparapi:b6fffad'
 
-	compile files('libs/jogamp-fat.jar')
+	implementation files('libs/jogamp-fat.jar')
 
 	// TODO: Add gradle to LX and P3LX so our cross-project dependencies work better
-	compile files('libs/P3LX.jar')
+	implementation files('libs/P3LX.jar')
 
-	compile files('libs/minim.jar')
+	implementation files('libs/minim.jar')
 
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
-	testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
 }
 
 compileKotlin {
