--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
 rootProject.name = 'SLStudio'
+
+include 'lx', 'p3lx'
+
+project(':lx').projectDir = file('submodules/lx')
+project(':p3lx').projectDir = file('submodules/p3lx')
