Fix compilation under Linux.

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,5 @@ rootProject.name = 'SLStudio'
 
 include 'lx', 'p3lx'
 
-project(':lx').projectDir = file('submodules/lx')
-project(':p3lx').projectDir = file('submodules/p3lx')
+project(':lx').projectDir = file('submodules/LX')
+project(':p3lx').projectDir = file('submodules/P3LX')
