--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ dependencies {
 	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
 
     // https://mvnrepository.com/artifact/uk.co.xfactory-librarians/coremidi4j
-    compile group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
+    implementation group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
 
 	// https://mvnrepository.com/artifact/org.processing/core
 	compileOnly group: 'org.processing', name: 'core', version: '3.3.6'
