--- a/build.gradle
+++ b/build.gradle
@@ -120,6 +120,7 @@ dependencies {
 	implementation 'com.github.SymmetryLabs:p3lx:f134a877'
 
 	implementation files('libs/minim.jar')
+	implementation files('libs/jogamp-fat.jar')
 
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
