add data files to built jar file

--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ dependencies {
 jar {
 	exclude('**/*.swp')
 	exclude('**/*.swo')
+
+    from('.') {
+        include 'data/*'
+    }
 }
 
 sourceSets {
