--- a/build.gradle
+++ b/build.gradle
@@ -128,6 +128,8 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
+
+	testCompile 'junit:junit:4.12'
 }
 
 compileKotlin {
