update p3lx, specify artifact within dependency

--- a/build.gradle
+++ b/build.gradle
@@ -123,7 +123,7 @@ dependencies {
 	// https://www.slf4j.org/manual.html
 	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
-	implementation 'com.github.SymmetryLabs:p3lx:db92221'
+	implementation 'com.github.SymmetryLabs.p3lx:P3LX:91b1437'
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
