--- a/build.gradle
+++ b/build.gradle
@@ -144,6 +144,8 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.1.1'
 
+	implementation group: 'de.javagl', name: 'obj', version: '0.3.0'
+
 	testCompile 'junit:junit:4.12'
 }
 
