--- a/build.gradle
+++ b/build.gradle
@@ -81,9 +81,9 @@ allprojects {
 if (hasProperty('localp3lx')) {
 	configurations.all {
 		resolutionStrategy.dependencySubstitution {
-			// when this is runs, the build uses ../p3lx and ../LX instead of the
+			// when this is runs, the build uses ../P3LX and ../LX instead of the
 			// jitpack dependency specified below
-			substitute module("com.github.SymmetryLabs.p3lx:p3lx") with project(":P3LX")
+			substitute module("com.github.SymmetryLabs.p3lx:P3LX") with project(":P3LX")
 			substitute module("com.github.SymmetryLabs.p3lx:LX") with project(":LX")
 		}
 	}
@@ -138,7 +138,7 @@ dependencies {
 	// https://www.slf4j.org/manual.html
 	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
-	implementation 'com.github.SymmetryLabs.p3lx:P3LX:1aa2d03'
+	implementation 'com.github.SymmetryLabs.p3lx:P3LX:dc9f0ae'
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
