--- a/build.gradle
+++ b/build.gradle
@@ -138,7 +138,12 @@ dependencies {
 	// https://www.slf4j.org/manual.html
 	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 
-	implementation 'com.github.SymmetryLabs.p3lx:P3LX:6bce9df'
+	// implementation 'com.github.SymmetryLabs.p3lx:P3LX:6bce9df'
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
+	compile group: 'uk.co.xfactory-librarians', name: 'coremidi4j', version: '0.9'
+	implementation 'com.github.SymmetryLabs:ArtNetStack:44ddfed'
+	implementation files('libs/LX.jar')
+	implementation files('libs/P3LX.jar')
 
 	implementation files('libs/minim.jar')
 	implementation files('libs/jogamp-fat.jar')
