fix build on Linux while maintaining build on MacOS

--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,9 @@ run {
 	if (JavaVersion.current() == JavaVersion.VERSION_1_8) {
 		jvmArgs '-XX:+UseParNewGC', '-XX:+UseConcMarkSweepGC'
 	}
-	jvmArgs '-XstartOnFirstThread'
+	if (System.properties["os.name"] == "Mac OS X") {
+		jvmArgs '-XstartOnFirstThread'
+	}
 
 	// To select a layout from the command line, "gradlew run -Playout=cubes"
 	systemProperty 'com.symmetrylabs.layout', findProperty('layout')
