better detection of JAVA_HOME (more info below)
The java.home property works well on Linux even when the user hasn't set
JAVA_HOME in the containing shell. But on MacOS + Homebrew-installed
JDK8, the java.home system property points to $JAVA_HOME/jre, which
probably is just reflecting the system's preference to run out of the
JRE instead of the JDK the JRE is installed inside.

The preferred way to get the value for JAVA_HOME on Mac is to run
/usr/libexec/java_home, but it's tricky to get gradle to fill in the
value of a variable from the output of a command line. Instead of
attempting to get that working, we just throw up a warning telling mac
users how to set JAVA_HOME in the containing shell.

--- a/slimgui/build.gradle
+++ b/slimgui/build.gradle
@@ -5,9 +5,20 @@ plugins {
 group = 'com.symmetrylabs'
 version = '1.0'
 
-def javaHome = System.properties["java.home"]
+def isValidJavaHome(javaHome) {
+	return javaHome != null && (new File(javaHome, "include")).exists();
+}
 
 tasks.withType(CppCompile) {
+	def javaHome = System.env.JAVA_HOME
+	if (!isValidJavaHome(javaHome)) {
+		javaHome = System.properties["java.home"];
+	}
+	if (!isValidJavaHome(javaHome)) {
+		throw new GradleScriptException(
+			"JAVA_HOME is not set; on a mac, run \"export JAVA_HOME=\$(/usr/libexec/java_home)\" and try again", null)
+	}
+
 	compilerArgs.add "-std=c++14"
 	compilerArgs.add "-DIMGUI_IMPL_OPENGL_LOADER_GLEW"
 	compilerArgs.add "-g"
